--- a/signUp.html
+++ b/signUp.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="wrong" id="wrong">
-            <p>Try&nbsp;again</p>
+            <p>Try again</p>
         </div>
     </main>
     <footer>
