--- a/buy.html
+++ b/buy.html
@@ -14,7 +14,7 @@
 <body>
     <header>
         <h1>
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 Gaming Shop, Discount, ფლესითეიშენის დისკები, თამაშები, 
             </a>
         </h1>
