--- a/products.html
+++ b/products.html
@@ -11,8 +11,7 @@
 <body>
     <header>
         <h1>
-             
-            <a href="index.html" target="_blank">
+            <a href="index.html">
                 Gaming Shop, Discount, ფლესითეიშენის დისკები, თამაშები,
             </a>
         </h1>
